#*****************************************************************************
#* VCLib                                                                     *
#* Visual Computing Library                                                  *
#*                                                                           *
#* Copyright(C) 2021-2022                                                    *
#* Alessandro Muntoni                                                        *
#* VCLab - ISTI - Italian National Research Council                          *
#*                                                                           *
#* All rights reserved.                                                      *
#****************************************************************************/

project(vclib-distance-test)

set(SOURCES
	main.cpp)

add_executable(vclib-distance-test ${SOURCES})

target_link_libraries(vclib-distance-test PUBLIC vclib)
